# TEREDACTA

./: .gitignore  README.md  pyproject.toml
deploy/: Caddyfile  README.md
docs/: demo-recovery-2924.md
docs/superpowers/plans/: 2026-03-16-teredacta-implementation.md  2026-03-22-ui-redesign.md  2026-03-23-public-deployment-hardening.md  2026-03-31-recovery-text-comparison.md  2026-03-31-stability-fixes.md  2026-04-01-concurrency-and-queue.md  2026-04-01-stress-test-suite.md  2026-04-02-performance-optimization.md  (+1 more)
scripts/: generate_thread_assets.py
stress/: README.md  locustfile.py  stress_config.py
teredacta/: __main__.py  _app_factory.py  admission.py  app.py  auth.py  config.py  db_pool.py  entity_index.py  sse.py  timeout_middleware.py  unob.py
teredacta/installer/: wizard.py
teredacta/routers/: admin.py  api.py  dashboard.py  documents.py  explore.py  groups.py  health.py  highlights.py  pdf.py  queue.py  recoveries.py  summary.py
teredacta/templates/: base.html  dashboard.html  dashboard_stats.html  error.html  explore.html  highlights.html
teredacta/tests/: conftest.py  test_admission.py  test_adversarial.py  test_auth.py  test_cli.py  test_config.py  test_db_pool.py  test_entity_index.py  test_format_merged_text.py  test_health.py  test_installer.py  test_integration.py  test_logging_setup.py  test_middleware.py  test_perf_optimizations.py  test_sse.py  test_sse_conditional.py  test_sse_executor.py  test_sse_nonblocking.py  test_stop_command.py  test_stress_admission.py  test_stress_compound_deadlock.py  test_stress_db_pool.py  test_stress_mixed.py  test_stress_sse.py  test_stress_thread_pool.py  test_timeout_middleware.py  test_unob.py  test_workers_config.py
tests/: test_highlights_pool_fix.py  test_pid_file_worker_fix.py
(+58 files in other folders)
